console looks a tiny bit better

--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -23,7 +23,13 @@ body,
     margin-top: 5%;
 }
 
+.console-output {
+    padding-left: 10px;
+}
+
 .console {
+    overflow: scroll;
+     /* height: 300px; */
     width: 100%;
     height: 30%;
     position: absolute;
