--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -10,7 +10,7 @@ body,
     display: table-cell;
     float: left;
     height: 100%;
-    width: 15%;
+    width: 86px;
     background-color: #333231;
     vertical-align: middle;
     text-align: center;
@@ -40,7 +40,7 @@ body,
 .left-side-bar {
     position: absolute;
     left: 0;
-    width: 30%;
+    width: 25%;
     height: 100%;
     background-color: #242321
 }
@@ -48,7 +48,7 @@ body,
 .right-side-bar {
     position: absolute;
     right: 0;
-    width: 70%;
+    width: 75%;
     height: 100%;
 }
 
@@ -65,7 +65,7 @@ body,
     justify-content: flex-end;
     top: 0;
     width: 100%;
-    height: 5%;
+    height: 43px;
     background-color: #242321;
 }
 
