--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -72,11 +72,11 @@ body,
 .workspace-tab {
     position: absolute;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     top: 0;
     width: 100%;
-    height: 43px;
-    background-color: #242321;
+    height: 50px;
+    background-color: #31302d;
 }
 
 Button {
