--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -38,8 +38,6 @@ body,
 }
 
 .console-hidden {
-    /* overflow: scroll; */
-     /* height: 300px; */
     width: 100%;
     height: 20px;
     position: absolute;
@@ -72,7 +70,7 @@ body,
 
 
 .code {
-    /* position: absolute; */
+    overflow: scroll;
     display: flex;
     justify-content: center;
     top: 0;
