--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -1,27 +1,40 @@
-html,
-body,
-#root,
-.App {
+html, body, #root, #app {
     height: 100%;
+    width: 100%;
+    padding:0%;
+    margin: 0%;
 }
 
+/* Main containers */
+
+#app {
+    display: flex
+}
 
 .icon-left-side-bar {
     display: table-cell;
     float: left;
     height: 100%;
-    width: 86px;
+    width: 90px;
     background-color: #333231;
     vertical-align: middle;
     text-align: center;
 }
 
-.tree {
-    display: flex;
-    justify-content: center;
-    margin-left: 20%;
-    margin-top: 5%;
+.left-menu {
+    left: 0;
+    width: 25%;
+    height: 100%;
+    background-color: #242321
 }
+
+.workspace {
+    right: 0;
+    width: 75%;
+    height: 100%;
+}
+
+/* Console */
 
 .console-output {
     padding-left: 10px;
@@ -29,7 +42,7 @@ body,
 
 .console {
     overflow: scroll;
-     /* height: 300px; */
+    /* height: 300px; */
     width: 100%;
     height: 30%;
     position: absolute;
@@ -45,21 +58,6 @@ body,
     background-color: white;
 }
 
-.left-side-bar {
-    position: absolute;
-    left: 0;
-    width: 25%;
-    height: 100%;
-    background-color: #242321
-}
-
-.workspace {
-    position: absolute;
-    right: 0;
-    width: 75%;
-    height: 100%;
-}
-
 .workspace-background {
     display: flex;
     position: relative;
@@ -67,7 +65,6 @@ body,
     width: 100%;
     background-color: #130d01;
 }
-
 
 .code {
     overflow: scroll;
@@ -96,7 +93,7 @@ Button {
 
 .tab-header {
     width: 100%;
-    height: 8%;
+    height: 50px;
     background-color: #010818a9
 }
 
