git page almost perfect

--- a/desktop-app/src/assets/css/Workspace.css
+++ b/desktop-app/src/assets/css/Workspace.css
@@ -14,7 +14,8 @@
 
 .code {
     overflow: scroll;
-    display: flex;
+    overflow-y: scroll;
+    overflow-x: hidden;
     justify-content: center;
     top: 0;
     width: 100%;
