--- a/desktop-app/src/assets/css/console.css
+++ b/desktop-app/src/assets/css/console.css
@@ -1,12 +1,14 @@
 /* Console */
 
 .console-output {
+    padding: 0%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: calc(100% - 20px);
     padding-left: 10px;
 }
 
 .console {
-    overflow: scroll;
-    /* height: 300px; */
     width: 100%;
     height: 30%;
     position: absolute;
@@ -22,16 +24,26 @@
     background-color: white;
 }
 
-.console::-webkit-scrollbar {
+.console-tab {
+    height: 20px;
+    width: 100%;
+}
+
+.console-output::-webkit-scrollbar {
     width: 12px;
 }
 
-.console::-webkit-scrollbar-thumb {
+.console-output::-webkit-scrollbar-thumb {
     background-color: rgb(199, 199, 204);
     border: 2px solid rgb(255, 255, 255);
 }
 
-.console::-webkit-scrollbar-thumb:hover {
+.console-output::-webkit-scrollbar-thumb:hover {
     background-color: rgb(188, 188, 189);
     border: 1px solid rgb(188, 188, 189);
+}
+
+.console-output p {
+    margin-top: 0%;
+    margin-bottom: 4px;
 }
