--- a/desktop-app/src/App.css
+++ b/desktop-app/src/App.css
@@ -90,6 +90,9 @@ Button {
 }
 
 .tab-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 50px;
     background-color: #010818a9
