--- a/desktop-app/src/assets/css/RoomMenu.css
+++ b/desktop-app/src/assets/css/RoomMenu.css
@@ -6,6 +6,9 @@
 }
 
 .tab-header {
+    display: flex;
+    align-items:stretch;
+    justify-content: center;
     width: 100%;
     height: 50px;
     background-color: #010818a9
@@ -13,7 +16,6 @@
 
 .tab-text {
     height: 100%;
-    display: flex;
     align-items: center;
     justify-content: center;
     color: white;
