--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -23,3 +23,24 @@
     color: white;
     height: 100%;
 }
+
+.projects {
+    height: 100%;
+}
+
+.project {
+    margin-top: 1%;
+    height: 50px;
+    line-height: 50px;
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+}
+
+.project:hover {
+    background-color: beige;
+}
+
+.project span {
+    color: rgb(45, 77, 107);
+}
