--- a/desktop-app/src/assets/css/Projects.css
+++ b/desktop-app/src/assets/css/Projects.css
@@ -6,6 +6,7 @@
 
 .workspace-background {
     display: flex;
+    justify-content: center;
     position: relative;
     height: 100%;
     width: 100%;
