--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -7,11 +7,23 @@
 
 .tab-header {
     display: flex;
-    align-items:stretch;
+    align-items: stretch;
     justify-content: center;
     width: 100%;
     height: 50px;
     background-color: #010818a9
+}
+
+
+.modal {
+    align-content: center;
+    text-align: center;
+    font-size: 20px;
+}
+
+.modal button{
+    font-size: 15px;
+    margin-left: 2%;
 }
 
 .tab-text {
@@ -32,6 +44,7 @@
 .project .icon {
     margin-left: 40px;
 }
+
 .project span.selected {
     margin-left: 30px;
 }
