--- a/desktop-app/src/assets/css/ProjectsFind.css
+++ b/desktop-app/src/assets/css/ProjectsFind.css
@@ -12,3 +12,19 @@
 .search input:focus {
     outline: none;
 }
+
+.project-found {
+    width: 50%;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    font-size: 25px;
+    color: azure;
+    align-content: center;
+    justify-content: center;
+
+}
+
+.project-found button {
+    margin-left: 5%;
+}
