pull and push work decent and in the backend

--- a/desktop-app/src/assets/css/leftMenu.css
+++ b/desktop-app/src/assets/css/leftMenu.css
@@ -20,3 +20,13 @@
     justify-content: center;
     color: white;
 }
+.git-hash-list {
+    height: 100%;
+}
+
+.git-hash {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    height: 40px;
+    width: 100%;
+}
