--- a/desktop-app/src/assets/css/leftMenu.css
+++ b/desktop-app/src/assets/css/leftMenu.css
@@ -1,32 +1,51 @@
 .left-menu {
-    left: 0;
-    width: 25%;
-    height: 100%;
+    left            : 0;
+    width           : 25%;
+    height          : 100%;
     background-color: #242321
 }
 
 .tab-header {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
+    display         : flex;
+    justify-content : center;
+    width           : 100%;
+    height          : 50px;
     background-color: #010818a9
 }
 
 .tab-text-feed {
-    height: 100%;
-    display: flex;
-    align-items: center;
+    height         : 100%;
+    display        : flex;
+    align-items    : center;
     justify-content: center;
-    color: white;
+    color          : white;
 }
+
 .git-hash-list {
     height: 100%;
 }
 
 .git-hash {
-    padding-top: 2px;
-    padding-bottom: 2px;
-    height: 40px;
-    width: 100%;
+    font-size      : 20px;
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    padding-top    : 2px;
+    padding-bottom : 2px;
+    height         : 40px;
+    width          : 100%;
+}
+
+.git-hash:hover {
+    background-color: brown;
+    cursor          : pointer
+}
+
+.commit {
+    color       : beige;
+    margin-right: 20px;
+}
+
+.hash {
+    color: rgb(0, 174, 255);
 }
