--- a/desktop-app/src/assets/css/LoginPage.css
+++ b/desktop-app/src/assets/css/LoginPage.css
@@ -9,9 +9,13 @@
 
 .greetings {
     font-size: 70px;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     color: white;
     font-family: 'Raleway', sans-serif;
+}
+
+.logo {
+    height: 160px;
 }
 
 .input-forms {
@@ -24,7 +28,7 @@
     font-size: 20px;
 }
 
-input {
+.inLog {
     height: 50px;
     width: 350px;
     border-radius: 10px;
@@ -39,7 +43,10 @@ input:focus {
     margin-top: 5%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    justify-content: space-around;
     background-color: white;
+    width: 420px;
     border-radius: 10px;
 }
 
