--- a/desktop-app/src/assets/css/WorkspaceTab.css
+++ b/desktop-app/src/assets/css/WorkspaceTab.css
@@ -7,3 +7,15 @@
     height: 50px;
     background-color: #31302d;
 }
+.react-switch-bg {
+    margin-left: 20px;
+    background: rgb(119, 7, 54) !important
+}
+
+.switch {
+    margin-top: 10px;
+    margin-left: 5%;
+}
+.react-switch-handle {
+    background: rgb(199, 195, 195) !important
+}
