--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -21,10 +21,6 @@
     font-size: 20px;
 }
 
-.active {
-    border-left: solid;
-    border-color: beige;
-}
 
 .modal button {
     font-size: 15px;
@@ -46,34 +42,44 @@
     height: 80%;
 }
 
+.active {
+    border-left: solid;
+    border-color: beige;
+    display: flex;
+}
+
 .project .icon {
     margin-left: 15px;
 }
 
 .project span.selected {
-    margin-left: 30px;
+    margin-left: 120px;
 }
 
 .project {
-    height: 50px;
+    height: 60px;
     line-height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 28px;
+    font-size: 26px;
 }
 
 .project:hover {
-    background-color: beige;
+    background-color: rgb(51, 47, 59);
 }
 
 .project span {
-    color: rgb(102, 167, 228);
+    color: rgb(232, 225, 241);
     cursor: pointer;
+    font-family: Sans-serif;
 }
 
+
 .icons {
+    margin-left: 60px;
     display: flex;
     flex-direction: row;
     cursor: pointer;
+    color: rgb(255, 255, 255);
 }
