--- a/desktop-app/src/assets/css/ProjectsCreate.css
+++ b/desktop-app/src/assets/css/ProjectsCreate.css
@@ -1,8 +1,8 @@
-.menu {
+.project-create {
     display: flex;
     align-items: center;
-    width: 70%;
-    background-color: #45434c;
+    width: 100%;
+    background-color: #424141;
     flex-direction: column;
 }
 
@@ -14,16 +14,25 @@
     flex-direction: column;
 }
 
-.crete-inputs input[type=text] {
-    width: 300px;
-    height: 30px;
-
-}
-
 .checkbox {
     font-size: 20px;
     font-family: monospace;
-    color: rgb(171, 218, 218);
+    color: rgb(228, 220, 231);
+}
+
+.crete-inputs input[type=text] {
+    border-radius: 8px;
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+
+}
+
+.crete-inputs input[type="text"]::placeholder {
+    color: #9c9c9c;
+    font-family: sans-serif;
+    font-size: 20px;
+    margin-left: 20px;
 }
 
 .crete-inputs input:focus {
@@ -35,10 +44,43 @@
 }
 
 .row {
+    width: 100%;
     margin-top: 5%;
 }
 
 textarea {
-    width: 500px;
-    height: 100px;
+    width: 100%;
+    height: 130px;
+    border-radius: 8px;
+    font-size: 20px;
+}
+
+h1 {
+    margin-top: 5%;
+    font-family: sans-serif;
+    color: rgb(242, 240, 243);
+}
+
+label {
+    font-family: sans-serif;
+    font-size: 20px;
+}
+
+.input[type="checkbox"] {
+    width: 30px !important; /*Desired width*/
+    height: 30px !important; /*Desired height*/
+}
+
+.sumbit-form {
+    width: 100px;
+    height: 30px;
+    font-family: sans-serif;
+    font-size: 16px;
+    background-color: #1e1425;
+    border: none;
+    color:rgb(230, 227, 227)
+}
+
+.sumbit-form:hover {
+    background-color: #594369;
 }
