minor css change

--- a/desktop-app/src/assets/css/ProjectsCreate.css
+++ b/desktop-app/src/assets/css/ProjectsCreate.css
@@ -84,4 +84,9 @@ label {
 
 .sumbit-form:hover {
     background-color: #594369;
+    cursor: pointer;
+}
+
+.sumbit-form:focus {
+    border: none;
 }
