--- a/desktop-app/src/assets/css/SideNavBar.css
+++ b/desktop-app/src/assets/css/SideNavBar.css
@@ -1,7 +1,19 @@
 .icon-nav-bar {
-    height: 100%;
+    padding-top: 40px;
+    height: calc(100%-40px);
     width: 90px;
-    background-color: #333231;
+    background-color: #303030;
     vertical-align: middle;
     text-align: center;
+}
+
+
+.IconSlideBar {
+    width: 44px;
+    height: 44px;
+    fill: none;
+    stroke:white;
+    stroke-width: 2.5;
+    stroke-linecap: round;
+    stroke-linejoin:round;
 }
