--- a/desktop-app/src/assets/css/base.css
+++ b/desktop-app/src/assets/css/base.css
@@ -3,6 +3,7 @@ html, body, #root, #app {
     width: 100%;
     padding: 0%;
     margin: 0%;
+    font-family: Raleway;
 }
 
 /* Main containers */
