--- a/desktop-app/src/assets/css/Workspace.css
+++ b/desktop-app/src/assets/css/Workspace.css
@@ -1,6 +1,6 @@
 .workspace-background {
     display: flex;
-    position: relative;
+    flex-direction: column;
     height: 100%;
     width: 100%;
     background-color: #130d01;
@@ -13,8 +13,7 @@
     justify-content: center;
     top: 0;
     width: 100%;
-    padding-top: 50px;
-    height: calc(100% - 50px);
+    height: 100%;
     background-color: #030200;
 }
 
