--- a/desktop-app/src/assets/css/WorkspaceTab.css
+++ b/desktop-app/src/assets/css/WorkspaceTab.css
@@ -1,10 +1,16 @@
 .workspace-tab {
-    position: absolute;
     display: flex;
     justify-content: space-between;
     justify-content: space-around;
     align-items: center;
     top: 0;
+    width: 70%;
+    height: 70px;
+}
+
+.tab {
+    display: flex;
+    justify-content: flex-start;
     width: 100%;
     height: 70px;
     background-color: #31302d;
@@ -14,7 +20,7 @@
     background: #00569F !important
 }
 
-span.MuiButton-label{
+span.MuiButton-label {
     font-family: Raleway;
     font-style: normal;
     font-weight: 300;
@@ -37,11 +43,11 @@ span.MuiButton-label{
 
 .makeStyles-menuIcon-2,
 .MuiButton-textSecondary,
-.MuiButton-textPrimary{
+.MuiButton-textPrimary {
     height: 44px;
 }
 
-.ArrUp{
+.ArrUp {
     height: 15px;
     transform: rotate(180deg)
 }
@@ -64,7 +70,8 @@ span.MuiButton-label{
     height: 44px;
     border-radius: 5px;
 }
-.dropdown select{
+
+.dropdown select {
     color: black;
     background: white;
     border: none;
@@ -73,7 +80,7 @@ span.MuiButton-label{
     border-radius: 5px;
 }
 
-.dropdown select:focus{
+.dropdown select:focus {
     border: none
 }
 
