refactored css to look better

--- a/desktop-app/src/assets/css/Workspace.css
+++ b/desktop-app/src/assets/css/Workspace.css
@@ -6,7 +6,8 @@
     background-color: #130d01;
 }
 
-.code {
+.workspace-background .code {
+    padding-top: 0;
     overflow: scroll;
     overflow-y: scroll;
     overflow-x: hidden;
