--- a/desktop-app/src/assets/css/WorkspaceTab.css
+++ b/desktop-app/src/assets/css/WorkspaceTab.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
     align-items: center;
     top: 0;
-    width: 70%;
+    width: 60%;
     height: 70px;
 }
 
@@ -32,7 +32,7 @@ span.MuiButton-label {
     display: flex !important;
     justify-content: space-around !important;
     color: white;
-    width: 169px !important;
+    width: 120px !important;
     height: 44px;
     border-radius: 5px;
 }
@@ -86,4 +86,18 @@ span.MuiButton-label {
 
 .hidden {
     display: none;
+}
+
+.auto-update {
+    width: 40px !important;
+    font-size: 25px !important;
+}
+
+.auto-update span.MuiButton-label svg {
+    height: 20px;
+    width: 20px;
+}
+
+span.MuiButton-label:hover {
+    background-color: darkslateblue;
 }
