--- a/desktop-app/src/assets/css/ProjectsCreate.css
+++ b/desktop-app/src/assets/css/ProjectsCreate.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    height: 100%;
     background-color: #424141;
     flex-direction: column;
 }
