changed sidenavbar color

--- a/desktop-app/src/assets/css/SideNavBar.css
+++ b/desktop-app/src/assets/css/SideNavBar.css
@@ -2,7 +2,7 @@
     padding-top: 40px;
     height: calc(100%-40px);
     width: 90px;
-    background-color: #303030;
+    background-color: #0f1311;
     vertical-align: middle;
     text-align: center;
 }
