--- a/desktop-app/src/assets/css/Projects.css
+++ b/desktop-app/src/assets/css/Projects.css
@@ -2,7 +2,7 @@
     right: 0;
     width: 75%;
     height: 100%;
-    border-left: 1px solid #FFFFFF;
+    border-left: 1px solid #515151;
 }
 
 .workspace-background {
