--- a/desktop-app/src/assets/css/WorkspaceTab.css
+++ b/desktop-app/src/assets/css/WorkspaceTab.css
@@ -7,7 +7,7 @@
     top: 0;
     width: 100%;
     height: 70px;
-    background-color: #31302d;
+    background-color: #303030;
 }
 
 .react-switch-bg {
@@ -26,7 +26,6 @@ span.MuiButton-label{
     display: flex !important;
     justify-content: space-around !important;
     color: white;
-    width: 169px !important;
     height: 44px;
     border-radius: 5px;
 }
@@ -39,7 +38,6 @@ span.MuiButton-label{
 .MuiButton-textSecondary,
 .MuiButton-textPrimary{
     height: 44px;
-    margin: 0 !important;
 }
 
 .ArrUp{
@@ -51,6 +49,12 @@ span.MuiButton-label{
     height: 18px;
     width: 20px;
     fill: none;
+}
+
+.ReDrop {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .react-switch-handle {
@@ -65,6 +69,7 @@ span.MuiButton-label{
     height: 44px;
     border-radius: 5px;
 }
+
 .dropdown select{
     color: black;
     background: white;
@@ -75,7 +80,8 @@ span.MuiButton-label{
 }
 
 .dropdown select:focus{
-    border: none
+    border: none;
+    outline: none;
 }
 
 .hidden {
