--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -14,21 +14,17 @@
 }
 
 .popup-content {
-    background: rgba(255, 255, 255, 0.055);
-    backdrop-filter: blur(10px);
+    padding: 0;
     border: none;
-    height: 400px;
-    width: 800px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
+    width: 50%;
 }
 
 .modal {
+    height: 150px !important;
+    background-color: rgb(70, 65, 80);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 50px;
     font-size: 35px;
