--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -21,7 +21,7 @@
 
 .modal {
     height: 150px !important;
-    background-color: rgb(51, 102, 128);
+    background-color: rgb(42, 30, 65);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,11 +33,12 @@
 }
 
 .modal button {
-    font-size: 16px;
-    background-color: rgba(0, 0, 0, 0);
+    margin-top: 2%;
+    font-size: 20px;
+    background-color: #6f6085;
+    border: none;
     color: white;
-    border-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     height: 45px;
     width: 150px;
     transition: 0.5s;
