made projects to look bleak if not downloaded

--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -68,6 +68,14 @@
     border-color: beige;
 }
 
+.project .non-active {
+    color: rgb(255, 255, 255, 0.3);
+}
+
+.project .non-active::after {
+    content: "🔥";
+}
+
 .project .icon {
     transition: 0.5s;
 } 
