--- a/desktop-app/src/assets/css/ProjectMembers.css
+++ b/desktop-app/src/assets/css/ProjectMembers.css
@@ -1,12 +1,14 @@
 .search {
-    margin-top: 20%;
+    width          : 70%;
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
 }
 
 .search input {
     margin-right: 5px;
-    height: 30px;
-    width: 300px;
-    /* font-size: 34px; */
+    height      : 30px;
+    width       : 100%;
 }
 
 .search input:focus {
@@ -14,45 +16,49 @@
 }
 
 .project-found {
-    width: 50%;
-    margin-top: 2%;
-    display: flex;
-    flex-direction: row;
-    font-size: 25px;
-    color: azure;
-    align-content: center;
+    width          : 50%;
+    margin-top     : 2%;
+    display        : flex;
+    flex-direction : row;
+    font-size      : 25px;
+    color          : azure;
+    align-content  : center;
     justify-content: center;
 
 }
 
-.icons {
-    cursor: pointer;
-}
 
 .member {
     margin-right: 40%;
 }
 
+.project-members {
+    display        : flex;
+    flex-direction : column;
+    justify-content: space-between;
+    align-items    : center;
+    width          : 100%;
+    height         : 100%;
+    background-color: #1a1917;
+}
+
 .current-member {
-    display: flex;
+    display        : flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-top: 2%;
+    align-items    : center;
+    flex-direction : row;
 }
 
 .current-members {
-    width: 50%;
-    margin-top: 2%;
-    display: flex;
-    flex-direction: column;
-    font-size: 25px;
-    color: azure;
-    align-content: center;
-    justify-content: center;
+    width           : 70%;
+    height          : 75%;
+    margin-top      : 2%;
+    display         : flex;
+    flex-direction  : column;
+    font-size       : 25px;
+    color           : azure;
+    align-content   : center;
+    background-color: #464646;
+    border-radius   : 5px;
 
-}
-
-.project-found button {
-    margin-left: 5%;
 }
