--- a/desktop-app/src/assets/css/ProjectMembers.css
+++ b/desktop-app/src/assets/css/ProjectMembers.css
@@ -28,31 +28,33 @@
 }
 
 
-.member {
-    margin-right: 40%;
-}
-
 .project-members {
-    display        : flex;
-    flex-direction : column;
-    justify-content: space-between;
-    align-items    : center;
-    width          : 100%;
-    height         : 100%;
-    background-color: #1a1917;
+    display         : flex;
+    flex-direction  : column;
+    justify-content : space-between;
+    align-items     : center;
+    width           : 100%;
+    height          : 100%;
+    background-color: #292826;
 }
 
 .current-member {
-    display        : flex;
+    margin-top     : 5px;
+    margin-bottom  : 5px;
+    padding-top    : 2px;
+    padding-bottom : 2px;
+    display: flex;
     justify-content: center;
-    align-items    : center;
-    flex-direction : row;
+    align-items: center;
+}
+
+.current-member:hover {
+    background-color: #5f5f5f;
 }
 
 .current-members {
     width           : 70%;
     height          : 75%;
-    margin-top      : 2%;
     display         : flex;
     flex-direction  : column;
     font-size       : 25px;
@@ -61,4 +63,16 @@
     background-color: #464646;
     border-radius   : 5px;
 
+}
+
+.current-member .icon {
+    cursor: pointer;
+}
+
+.member-row {
+    width: 60%;
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    flex-direction: row;
 }
