pop up for not found member look decent

--- a/desktop-app/src/assets/css/ProjectMembers.css
+++ b/desktop-app/src/assets/css/ProjectMembers.css
@@ -76,3 +76,10 @@
     align-items    : center;
     flex-direction: row;
 }
+
+.not-found {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
