--- a/desktop-app/src/assets/css/ProjectsMenu.css
+++ b/desktop-app/src/assets/css/ProjectsMenu.css
@@ -1,52 +1,60 @@
 .left-menu {
-    width: 25%;
-    height: 100%;
+    width           : 25%;
+    height          : 100%;
     background-color: #242321;
 }
 
 .tab-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 70px;
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    width           : 100%;
+    height          : 70px;
     background-color: #454355;
 }
 
 .popup-content {
     padding: 0;
-    border: none;
-    width: 50%;
+    border : none;
+    width  : 50%;
 }
 
 .modal {
-    height: 150px !important;
+    height          : 150px !important;
     background-color: rgb(42, 30, 65);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    font-size: 20px;
-    color: white;
-    font-weight: 300;
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    align-items     : center;
+    height          : 50px;
+    font-size       : 20px;
+    color           : white;
+    font-weight     : 300;
 }
 
 .modal button {
-    margin-top: 2%;
-    font-size: 20px;
+    margin-top      : 2%;
+    font-size       : 20px;
     background-color: #6f6085;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    height: 45px;
-    width: 150px;
-    transition: 0.5s;
+    border          : none;
+    color           : white;
+    border-radius   : 5px;
+    height          : 45px;
+    width           : 150px;
+    transition      : 0.5s;
 }
 
 .modal button:hover {
     background-color: #29272C;
-    cursor: pointer;
+    cursor          : pointer;
+}
+
+.modal button:disabled:hover {
+    cursor: not-allowed
+}
+
+.modal button:disabled{
+    background-color: #29272C;
 }
 
 .modal button:focus {
@@ -54,8 +62,8 @@
 }
 
 .tab-text {
-    color: white;
-    font-size: 30px;
+    color     : white;
+    font-size : 30px;
     font-style: normal;
 }
 
@@ -64,7 +72,7 @@
 }
 
 .active {
-    border-left: solid;
+    border-left : solid;
     border-color: beige;
 }
 
@@ -74,16 +82,16 @@
 
 .project .non-active::after {
     content: "🔥";
-    color: rgb(255, 255, 255, 1);
+    color  : rgb(255, 255, 255, 1);
 }
 
 .project .icon {
     transition: 0.5s;
-} 
+}
 
 .project .icon:hover {
     color: white;
-}   
+}
 
 .project span {
     margin-left: 10px;
@@ -91,14 +99,14 @@
 }
 
 .project {
-    margin-top: 5px;
-    height: 60px;
-    line-height: 50px;
-    display: flex;
+    margin-top     : 5px;
+    height         : 60px;
+    line-height    : 50px;
+    display        : flex;
     justify-content: space-between;
-    align-items: center;
-    font-size: 26px;
-    cursor: pointer;
+    align-items    : center;
+    font-size      : 26px;
+    cursor         : pointer;
 }
 
 .project:hover {
@@ -111,11 +119,11 @@
 }
 
 .icons {
-    margin-right: 10px;
-    width: 80px;
-    display: flex;
-    flex-direction: row;
+    margin-right   : 10px;
+    width          : 80px;
+    display        : flex;
+    flex-direction : row;
     justify-content: space-between;
-    cursor: pointer;
-    color: #131010;
+    cursor         : pointer;
+    color          : #131010;
 }
