--- a/bridge/src/assets/css/editor.css
+++ b/bridge/src/assets/css/editor.css
@@ -3,25 +3,27 @@
     display: flex;
 }
 
+
 .tree-view {
-    width: 15%;
+    width: 20%;
     height: 100%;
     background-color: rgb(82, 73, 62);
 }
 
+
 .editor {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#terminal {
+    width: 100%;
+    height: 30%
 }
 
 #aceEditor {
+    height: 70% !important;
     width: 100% !important;
-
-}
-
-.xterm-screen{
-    width: 100% !important
-}
-
-.xterm-viewport {
-    width: 100% !important
 }
