--- a/bridge/src/assets/css/editor.css
+++ b/bridge/src/assets/css/editor.css
@@ -8,6 +8,7 @@
     width: 20%;
     height: 100%;
     background-color: rgb(170, 169, 168);
+    overflow: scroll;
 }
 
 
@@ -26,4 +27,23 @@
 #aceEditor {
     height: 65% !important;
     width: 100% !important;
+}
+
+.tree-view::-webkit-scrollbar {
+    width: 8px;
+}
+
+.tree-view::-webkit-scrollbar-thumb {
+    background-color: rgb(199, 199, 204);
+}
+
+.tree-view::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(188, 188, 189);
+    border: 1px solid rgb(188, 188, 189);
+}
+
+.tree-view::-webkit-scrollbar:horizontal {
+    height: 0;
+    width: 0;
+    display: none;
 }
