--- a/bridge/src/assets/css/editor.css
+++ b/bridge/src/assets/css/editor.css
@@ -12,10 +12,24 @@
 }
 
 .tree-tab {
-    height: 30px;
+    height: 40px;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: space-evenly; */
+    align-items: center;
+}
+
+.project-name {
+    width: 60%;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.file-icons {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .file-icon:hover{
