--- a/bridge/src/assets/css/index.css
+++ b/bridge/src/assets/css/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root, #app {
+    height: 100%;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
+    font-family: Raleway;
+}
