--- a/bridge/src/assets/css/index.css
+++ b/bridge/src/assets/css/index.css
@@ -2,10 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root, #app {
+html,
+body,
+#root,
+#app {
     height: 100%;
     width: 100%;
     padding: 0%;
     margin: 0%;
     font-family: Raleway;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(199, 199, 204);
+}
+
+::-webkit-scrollbar-corner {
+    background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(146, 141, 141) !important;
+    border: 1px solid rgb(136, 135, 135) !important;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 0;
+    width: 0;
+    display: none;
 }
