--- a/bridge/src/assets/index.css
+++ b/bridge/src/assets/index.css
@@ -13,6 +13,16 @@ body,
     font-family: Raleway;
 }
 
+.IconSlideBar {
+    width: 44px;
+    height: 44px;
+    fill: none;
+    stroke:white;
+    stroke-width: 2.5;
+    stroke-linecap: round;
+    stroke-linejoin:round;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
 }
